--- a/_建立分組協同報告.md
+++ b/_建立分組協同報告.md
@@ -1,2 +1,21 @@
 # 建立分組協同報告.md
 
+### 組員名單
+
+4023256
+
+40223101
+
+40223115
+
+40223117
+
+40223119
+
+40223136
+
+課程網址: https://wordpress-2015course.rhcloud.com/?p=256 
+
+github reposit: https://github.com/40223101/2015cdag1_0421
+
+Waffle:https://waffle.io/40223101/2015cdag1_04210
