--- a/_新產品開發流程.md
+++ b/_新產品開發流程.md
@@ -1,2 +1,19 @@
 # 新產品開發流程.md
 
+###如果利用scrum流程
+1.了解使用者的需求
+
+2.調整需求清單
+
+3.規劃進度分配(sprint planning)
+
+4.週期性開會，報告、討論個人及團體進度
+
+5.有餘力之時加入更多新需求
+
+6.開會、分析然後持續進行3.4.5
+
+
+參考:
+
+http://www.projectup.net/blog/index.php?option=com_content&view=article&id=6651%3Ascrum&Itemid=29
